--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,6 +115,12 @@ blockquote {
   margin-top: var(--flow-space, 1em);
 }
 
+hr {
+  border: 0px;
+  padding-y: calc(0.4rem * 1.4);
+  border-bottom: 1px solid #000;
+}
+
 p,
 li {
   max-width: 60ch;
