--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,11 @@ nav {
   display: block;
 }
 
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
 * {
   box-sizing: border-box;
 }
@@ -207,7 +212,10 @@ img {
 }
 
 .wrapper {
-
+  border-width: var(--border-thick);
+  border: var(--border-thick) solid;
+  padding: var(--padding);
+  margin: 0 auto;
 }
 
 /* Box
